webkit scrollbar fix

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -503,6 +503,23 @@ PARALLAX SLIDER
 	z-index: 1000;
 }
 
+.parallax-wrapper::-webkit-scrollbar {
+    width: 0px;
+    height: initial;
+    background-color:initial;
+}
+.parallax-wrapper::-webkit-scrollbar-track {
+    background-color:initial;
+    width: 0px;
+}
+.parallax-wrapper::-webkit-scrollbar-track-piece  {
+    background-color: initial;
+}
+.parallax-wrapper::-webkit-scrollbar-thumb {    
+    background-color: initial;
+    width: 0px;
+}
+
 /*PARALLAX*/
 .parallax{
 	background-image: url(/img/parallax/whole-bg.jpg);
